Perubahan CSS style untuk  Vertically Responsive Layout

--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ aside{
 section.main{
    flex: 80%;
    background: #fff;
-   min-height: 530px;
+   min-height: 100vh;
    padding: 15px 20px;
 }
 footer{
