Pengembangan fitur timer untuk menampilkan form card setelah waktu sop habis/dihentikan sebagai langkah akhir penyelesaian SOP yang dijalankan

--- a/app-2.0/sop/css/style.css
+++ b/app-2.0/sop/css/style.css
@@ -608,4 +608,16 @@ input[type=radio]{
     top: 133px;
     left: 1225px;
 
-  }
+}
+
+.flex-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.flex-container > .flex-item{
+  width: fit-content;
+  border:1px solid gray;
+  padding:20px 60px; 
+  margin: 0.5em;
+}
