Menyesuaikan style menu hamburger berdasarkan level user. Menutup akses masuk apk sop untuk level sdm & kasir. Menutup akses masuk apk smm untuk level clusterx

--- a/app-2.0/smm/css/style.css
+++ b/app-2.0/smm/css/style.css
@@ -46,7 +46,15 @@ nav ul li a:hover{
     color:  rgb(241, 217, 166);;
 }
 
+/* Navigasi untuk user selain owner */
+nav ul#not-owner-nav {
+  justify-content:flex-end;
 
+}
+
+nav ul#not-owner-nav li {
+  margin-right: 20px;
+}
 
 /* Hamburger menu */
 .menu-toggle {
@@ -135,6 +143,15 @@ nav ul li a:hover{
     nav ul.slide {
         opacity: 1;
         transform: translateX(0);
+    }
+    
+    /* Navigasi untuk user selain owner */
+    nav ul#not-owner-nav {
+      justify-content:center;
+    }
+
+    nav ul#not-owner-nav li {
+      margin-bottom: 20px;
     }
 }
 
