--- a/app-2.0/sop/css/style.css
+++ b/app-2.0/sop/css/style.css
@@ -500,6 +500,17 @@ section.main .scrollable-wrapper {
   overflow-y: scroll;
 }
 
+/* Menghilangkan scrollbar pada Chrome, Safari and Opera */
+section.main .scrollable-wrapper::-webkit-scrollbar {
+  display: none;
+}
+
+/* Menghilangkan scrollbar pada IE, Edge and Firefox */
+section.main .scrollable-wrapper {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
 section.main .scrollable-card-content {
   overflow-x: scroll;
 }
