Memperbaiki input style pada login box sop

--- a/app-2.0/sop/css/style.css
+++ b/app-2.0/sop/css/style.css
@@ -447,6 +447,13 @@ label.label_tahun_rb {
 }
 
 /* Form */
+.login-box input, .login-box select{
+  width: 89%;
+  padding: 15px 20px;
+  margin: 8px 0;
+  border: 1px solid #ccc;
+}
+
 .input-checkbox input, 
 .input-checkbox select {
   padding: 15px 20px;
