--- a/app-2.0/sop/css/style.css
+++ b/app-2.0/sop/css/style.css
@@ -652,3 +652,11 @@ input[type=radio]{
   padding:20px 60px; 
   margin: 0.5em;
 }
+
+.clear-padding {
+  padding: 0 !important;
+}
+
+.clear-border {
+  border: 0 !important;
+}
