--- a/app-2.0/sop/css/style.css
+++ b/app-2.0/sop/css/style.css
@@ -641,6 +641,16 @@ input[type=radio]{
 
 }
 
+.btn_cetak {
+  padding: 0.8em 1.2em;
+  background-color: yellow;
+  color: gray;
+  text-decoration: none;
+  border-radius: 5px;
+  border: 1px grey solid;
+  float: right;
+}
+
 .flex-container {
   display: flex;
   flex-wrap: wrap;
