Pembuatan program & penyusunan query untuk menarik data dari db pada apk SOP modul Rekap Bulanan

--- a/app-2.0/sop/css/style.css
+++ b/app-2.0/sop/css/style.css
@@ -481,6 +481,13 @@ input[type=submit] {
    margin: 20px 20px;
 }
 
+.standar-input {
+  width: 15rem;
+  padding: 15px 20px;
+  margin: 2px 0;
+  border: 1px solid #ccc;
+}
+
 /* Layout */
 section.main{
   background: #fff;
